# Pcaob_Inspections

./: .gitignore  Bibliography_base.bib  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  README.md
.claude/references/: coding-standards-python.md
master_supporting_docs/: PCAOB_Inspection_Research_Discussion_Notes_v1.md  README.md  data_sources.md  firm_to_office_mapping_methodology.md  pcaob_data_structure.md  replication_packages.md  revelio_labs_integration.md  wrds_audit_analytics_schema.md  wrds_revelio_labs_schema.md
quality_reports/plans/: 2026-04-29_idea_a_scoping.md  2026-04-29_idea_b_scoping.md  2026-04-29_idea_c_scoping.md
scripts/python/: pyproject.toml
