[project]
name = "pcaob-inspections-analysis"
version = "0.1.0"
description = "Analysis code for the PCAOB Inspections research program"
requires-python = ">=3.11"

dependencies = [
  # Data layer
  "pandas>=2.2",
  "polars>=1.0",
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "numpy>=1.26",
  "scipy>=1.12",

  # PCAOB / EDGAR ingest
  "pdfplumber>=0.11",
  "pymupdf>=1.24",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",

  # Text / NLP for inspection narrative analysis (Idea E)
  "transformers>=4.40",
  "sentence-transformers>=3.0",
  "bertopic>=0.16",
  "spacy>=3.7",
  "scikit-learn>=1.5",

  # Econometrics — staggered DiD, fixed effects, event study
  "linearmodels>=6.0",
  "pyfixest>=0.20",
  "differences>=0.2",
  "statsmodels>=0.14",

  # Plotting
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "ipython>=8.20",
  "jupyterlab>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
